# simpledb

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/file/: CMakeLists.txt  a.out  block_id.cpp  data.txt  file_manager.cpp  page.cpp  test_file.cpp
src/include/common/: constants.h
src/include/file/: block_id.h  file_manager.h  page.h
src/include/log/: log_iterator.h  log_manager.h
src/include/record/: rid.h
src/include/utils/: logger.h
src/record/: CMakeLists.txt  rid.cpp
test/: CMakeLists.txt
test/file/: blockid_test.cpp
test/record/: record_test.cpp
